@@ -1,3 +1,11 @@
+2009-12-03  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* process.c (Qseqpacket): New symbol.
+	(HAVE_SEQPACKET): New macro.
+	(Fmake_network_process): Accept new :type `seqpacket'.
+	(init_process): Add `seqpacket' feature when applicable.
+	(syms_of_process): Initialize Qseqpacket.
+
 2009-12-01  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>
 
 	* font.c (font_load_for_lface, font_open_by_name): Don't store name
